--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -4,7 +4,6 @@
 }
 
 body{
-    background: #28252E;
 }
 
 #logo {
@@ -23,43 +22,148 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
 }
 
 .header-top{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  justify-content: space-between;
+  align-items: center;
+  display: flex;
 }
 
 .connexion-text{
-    font-family: "Ubuntu Regular";
-    color: white;
-    margin-right: 20px;
-    position: relative;
-    top: 25px;
+  font-family: "Ubuntu Regular";
+  margin-right: 20px;
+  position: relative;
+  color: white;
+  top: 25px;
 }
 
 .connexion-line{
-    width: 73px;
-    height: 3px;
-    background-color: #F4CD4A;
-    position: relative;
-    right: 15px;
-    top: 25px;
+  top: 25px;
+  width: 73px;
+  height: 3px;
+  right: 15px;
+  position: relative;
+  background-color: #F4CD4A;
 }
 
 .greyLine{
-    width: 80%;
-    height: 1px;
-    background-color: #888888;
-    margin-top: 90px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 80%;
+  height: 2px;
+  margin-top: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #888888;
 }
 
 .whiteHalfCircle{
-    background-color: white;
-    height: 300px;
-    width: 100vw;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    margin-top: 204px;
+  bottom: 0;
+  z-index: -1;
+  width: 100vw;
+  height: 300px;
+  position: absolute;
+  background-color: white;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
 }
 
+.ship {
+  display: flex;
+  margin: 0 auto;
+}
+
+
+.name {
+  color: white;
+  width: 300px;
+  padding: 5px;
+  margin: 0 auto;
+  font-size: 24px;
+  margin-top: 20px;
+  padding-top: 15px;
+  text-align: center;
+  letter-spacing: 2px;
+  padding-bottom: 15px;
+  text-shadow: 2px 2px 2px white;
+  border-top: solid #979797 1px;
+  font-family: "Ubuntu regular";
+  border-bottom: solid #979797 1px;
+}
+
+.imgShip {
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 70px;
+  height: 240px;
+  width: 270px;
+  display: flex;
+}
+
+.moreInfo {
+  font-family: "Ubuntu regular";
+  letter-spacing: 2px;
+  background: #6B696F;
+  text-align: center;
+  border-radius: 3px;
+  padding: 13px 20px;
+  margin-top: 10px;
+  font-size: 13px;
+  color: #EAEAEA;
+  display: block;
+  margin: auto;
+  width: 145px;
+}
+
+.yellowLineBox {
+  display: flex;
+  justify-content: center;
+  margin-top: 7%;
+}
+
+.yellowLine {
+  background-color: #F4CD4A;
+  text-align: center;
+  width: 258px;
+  height: 1px;
+}
+
+.seeAll {
+  font-family: "Ubuntu regular";
+  text-align: center;
+  margin-top: 30px;
+  font-size: 24px;
+  color: #6B696F;
+}
+
+.footer {
+  width: 130px;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.greyTouch1 {
+  width: 20px;
+  height: 1px;
+  background-color: #D8D8D8;
+}
+.greyTouch2 {
+  width: 20px;
+  height: 1px;
+  background-color: #D8D8D8;
+}
+.greyTouch3 {
+  width: 20px;
+  height: 1px;
+  background-color: #D8D8D8;
+}
+.greyTouch1:hover {
+  background-color: black;
+  height: 5px;
+}
+.greyTouch2:hover {
+  background-color: black;
+  height: 5px;
+}
+.greyTouch3:hover {
+  background-color: black;
+  height: 5px;
+}
