--- a/ressources/css/style-single.css
+++ b/ressources/css/style-single.css
@@ -70,6 +70,13 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
   margin-right: 100px;
 }
 
+.informations-image{
+  position: absolute;
+  z-index: 3;
+  margin-top: 18%;
+  margin-left: 33%;
+}
+
 .whiteCircle-container{
   position: absolute;
   z-index: 1;
