--- a/ressources/css/style-all.css
+++ b/ressources/css/style-all.css
@@ -14,10 +14,10 @@ body{
     top: 0;
     z-index: 1000;
 }
-svg[Attributes Style] {
+/*svg[Attributes Style] {
     width: 100;
     height: 100;
-}
+}*/
 user agent stylesheet
 svg:not(:root), symbol, image, marker, pattern, foreignObject {
     overflow: hidden;
@@ -54,7 +54,7 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
   background-color: white;
   border-radius: 5px;
   height: 250px;
-  width: 30%;
+  width: 365px;
 }
 
 .one-image{
