--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -5,6 +5,7 @@
 
 body{
   /*position: relative;*/
+
 }
 
 a {
@@ -16,10 +17,11 @@ a {
     top: 0;
     z-index: 1000;
 }
+/*
 svg[Attributes Style] {
     width: 100;
     height: 100;
-}
+}*/
 user agent stylesheet
 svg:not(:root), symbol, image, marker, pattern, foreignObject {
     overflow: hidden;
