--- a/ressources/css/style-single.css
+++ b/ressources/css/style-single.css
@@ -26,6 +26,7 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
 .header{
   position: absolute;
   z-index: 2;
+  left: 4%;
 }
 
 .header-breadcrumb{
@@ -94,4 +95,34 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
   background: white;
   top: -25%;
   bottom: 75%;
+}
+
+
+/*Page description.php*/
+
+.descriptive-container{
+  position: absolute;
+  top: 200px;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 100px;
+}
+
+.descriptive-title{
+  font-size: 40px;
+  color: white;
+  text-align: center;
+  text-shadow: 0px 0px 30px rgba(255, 255, 255, 1);
+  letter-spacing: 18px;
+}
+
+.descriptive-paragraph{
+  color: white;
+  margin-top: 40px;
+  line-height: 22px;
+  letter-spacing: 4px;
+}
+
+.descriptive-orange{
+  color: #f4cd4a;
 }
