--- a/ressources/css/style-single.css
+++ b/ressources/css/style-single.css
@@ -14,10 +14,10 @@ body{
     top: 0;
     z-index: 1000;
 }
-svg[Attributes Style] {
+/*svg[Attributes Style] {
     width: 100;
     height: 100;
-}
+}*/
 user agent stylesheet
 svg:not(:root), symbol, image, marker, pattern, foreignObject {
     overflow: hidden;
@@ -49,6 +49,7 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
 }
 
 .informations-title{
+  text-transform: uppercase;
   border: 1px solid rgba(40, 40, 40, 0.5);
   padding-top: 15px;
   padding-bottom: 15px;
