--- a/ressources/css/connexion.css
+++ b/ressources/css/connexion.css
@@ -82,6 +82,7 @@ svg:not(:root), symbol, image, marker, pattern, foreignObject {
 
 .link-container{
   margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 .bottom-link{
